test/errors/errors2.todo
*/ task1.
    """
    */ Task should not appear inside comments.
    """